--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
         <title>Document</title>
 
-        <link rel="stylesheet" type="text/css" href="/css/font_awesome.css">
-        <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/font_awesome.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <i class="fas fa-bars"></i>
