Add footer and style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,35 @@
     </head>
     <body>
         <i class="fas fa-bars"></i>
+
         
+        <footer>
+            <div class="main_footer">
+                <div class="icons">
+                    <a class="anchor" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="anchor" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="anchor" href="#"><i class="fab fa-youtube"></i></a>
+                    <a class="anchor" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="anchor" href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a class="anchor" href="#"><i class="fas fa-rss"></i></a>
+                    <a class="anchor" href="#"><i class="fas fa-envelope"></i></a>
+                </div>
+                <div class="links">
+                    <a class="anchor" href="#">EVENTS</a>
+                    <a class="anchor" href="#">ABOUT</a>
+                    <a class="anchor" href="#">ADVERTISE</a>
+                    <a class="anchor" href="#">JOBS</a>
+                    <a class="anchor" href="#">CONTACT</a>
+                </div>
+            </div>
+
+            <div class="credits">
+                <p class="text"><i class="far fa-copyright"></i> 2006-2020 The Next Web B.V. <img class="tnw_logo" src="img/tnw.svg" alt="TNW"></p>
+                <p class="text">Made with <i class="fas fa-heart"></i> in Amsterdam.</p>
+                <p class="text">Powered by <a href="#"><img class="stackpath" src="img/stackpath.svg" alt="Stack Path"></a></p>
+            </div>
+        </footer>
+
         <script src="/js/font_awesome.min.js"></script>
     </body>
 </html>
