Add deals and style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,94 @@
     <body>
         <i class="fas fa-bars"></i>
 
-        
+        <div class="deals_section">
+            <div class="deals_header">
+                <h2 class="title"><a class="anchor" href="#">Latest deals ></a></h2>
+                <a class="right" href="#">See all Deals</a>
+            </div>
+            <div class="deals">
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal1.png" alt="Deal 1"></a>
+
+                    <div>
+                        <a class="description" href="#">The Beginner Cloud Architect Professional Training Bundle Ft. Azure & AWS</a>
+                        <span class="old_price">$944</span>
+                        <span class="new_price">$39.99</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal2.png" alt="Deal 2"></a>
+
+                    <div>
+                        <a class="description" href="#">The Social Distancing Lifetime Subscription Bundle Ft. Rosetta Stone</a>
+                        <span class="old_price">$844.50</span>
+                        <span class="new_price">$199</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal3.png" alt="Deal 3"></a>
+
+                    <div>
+                        <a class="description" href="#">Learn How to Draw Freebie Bundle</a>
+                        <span class="old_price">$0</span>
+                        <span class="new_price">$0</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal4.png" alt="Deal 4"></a>
+
+                    <div>
+                        <a class="description" href="#">The All-in-One Adobe Creative Cloud Suite Certification Course Bundle</a>
+                        <span class="old_price">$1600</span>
+                        <span class="new_price">$33.99</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal5.png" alt="Deal 5"></a>
+
+                    <div>
+                        <a class="description" href="#">AWS Cloud Essentials Course</a>
+                        <span class="old_price">$200</span>
+                        <span class="new_price">$19.99</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal6.png" alt="Deal 6"></a>
+
+                    <div>
+                        <a class="description" href="#">The Ultimate Adobe Illustrator's Guidebook Certification Bundle</a>
+                        <span class="old_price">$1447</span>
+                        <span class="new_price">$34.99</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal7.png" alt="Deal 7"></a>
+
+                    <div>
+                        <a class="description" href="#">The Ultimate Microsoft Excel Certification Training Bundle</a>
+                        <span class="old_price">$945</span>
+                        <span class="new_price">$33.99</span>
+                    </div>
+                </div>
+
+                <div class="deal">
+                    <a href="#"><img class="picture" src="img/deal8.png" alt="Deal 8"></a>
+
+                    <div>
+                        <a class="description" href="#">The Lifetime MBA Bootcamp Bundle</a>
+                        <span class="old_price"><br />$1622</span>
+                        <span class="new_price">$29</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer>
             <div class="main_footer">
                 <div class="icons">
