In this update 1. I corrected floating errors 2. Corrected the error on the styling that made the menu bar to overlap

--- a/index.html
+++ b/index.html
@@ -65,45 +65,7 @@
 
               <div class="latest-news_ clear">
                   <h3>Latest news</h3>
-                  <div class="container-fluid">
-
-                      <div class="row">
-                        <div class="col-md">
-                          <div>Lorem ipsum dolor sit amet.</div>
-                        </div>
-                        <div class="col-md">
-                            <div>Lorem ipsum dolor sit amet.</div>
-                        </div>
-                        <div class="col-md">
-                          <div>Lorem ipsum dolor sit amet.</div>
-                        </div>
-                        <div class="col-md">
-                          <div>Lorem ipsum dolor sit amet.</div>
-                        </div>
-                      </div>
-
-                      <div class="row">
-                          <div class="col-sm">
-                              <div>Lorem ipsum dolor sit amet.</div>
-                          </div>
-                          <div class="col-sm">
-                              <div>Lorem ipsum dolor sit amet.</div>
-                          </div>
-                          <div class="col-sm">
-                              <div>Lorem ipsum dolor sit amet.</div>
-                          </div>
-                          <div class="col-sm">
-                              <div>Lorem ipsum dolor sit amet.</div>
-                          </div>
-                      </div>
-
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-
-
-                    </div>
+                 
               </div>
             </div>
         </div>
@@ -223,6 +185,6 @@
             </div>
         </footer>
 
-        <script src="/js/font_awesome.min.js"></script>
+        <script src="js/font_awesome.min.js"></script>
     </body>
 </html>
