--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -330,7 +330,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -364,7 +364,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -398,7 +398,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -432,7 +432,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -466,7 +466,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -500,7 +500,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
@@ -534,7 +534,7 @@
                  </div>
              </div>
 
-             <div class="latest">
+             <div class="hl_latest">
                  <div class="lt_text_container">
                      <span class="lt_text">LATEST</span>
 
